[project]
name = "docs-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.2",
    "pytest>=9.0.2",
    "requests>=2.31.0",
    "minsearch>=0.0.3",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (select with '-m integration')",
]
